--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,16 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <!--<script src="node_modules/systemjs/dist/system.src.js"></script>
 
     <script src="systemjs.config.js"></script>
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
-    </script>
+    </script>-->
   </head>
 
   <body>
     <my-app>Loading AppComponent content here ...</my-app>
+    <script src="build.js"></script>
   </body>
 </html>
